resolved naming inconsistency

--- a/sass/partials/_mixins.sass
+++ b/sass/partials/_mixins.sass
@@ -20,7 +20,7 @@
     &:active
         background-color: darken($color, 12%)
         box-shadow: none
-    &__disabled
+    &--disabled
         background-color: transparentize($color, .5)
         box-shadow: none
 
