bem inconsistency resolved

--- a/sass/partials/_carousel.sass
+++ b/sass/partials/_carousel.sass
@@ -3,10 +3,10 @@
     position: relative
     padding-bottom: 24px
 
-    &__B
+    &--B
         @include container(64, 0, 48, 0)
 
-    h2.lpHdl__2
+    h2.lpHdl--2
             margin-bottom: 32px
             text-align: center
             color: $green
