--- a/sass/partials/_carousel.sass
+++ b/sass/partials/_carousel.sass
@@ -14,7 +14,7 @@
     .swiper
         max-width: 100%
         position: relative
-        padding: 0 60px
+        padding: 0 40px
         overflow: hidden
 
         // carousel
@@ -32,7 +32,7 @@
             height: auto
         
 
-        a.swiper-slide
+        .swiper-slide
             border-radius: 6px
             cursor: pointer
             height: auto
@@ -42,7 +42,7 @@
             text-align: center
             padding: 24px
             @include flexVert
-            gap: 16px
+            gap: 12px
             justify-content: space-between
             text-decoration: none
 
@@ -53,11 +53,11 @@
                 color: $grey6
                 transition: all 300ms ease-in-out
 
-            p.swiper-product-name
-                min-height: 44px
-
             .swiper-product-img
                 margin-bottom: 10px
+
+            p.swiper-product-name
+                margin-top: 12px
 
             p.swiper-product-cprice
                 @include type(14, 1.5, 400)
@@ -68,6 +68,7 @@
             p.swiper-product-price
                 color: $red
                 @include type(14, 1.5, 400)
+                margin-top: auto
 
             &:hover
                 box-shadow: 0 2px 6px 0px rgba(0,0,0,0.15)
@@ -188,13 +189,13 @@
                 a.alza-btn
                     margin-top: 0
 
-                .swiper-container, .swiper-wrapper
+                .swiper-wrapper
                     padding: 0
                 
                 .swiper-pagination
                     display: none
 
-                a.swiper-slide:hover
+                .swiper-slide:hover
                     box-shadow: none
 
 @media only screen and (max-width: 560px)
@@ -202,11 +203,8 @@
     .mobileapp #landingpage
         .lpCarousel
             .swiper
-                a.swiper-slide
+                .swiper-slide
                     justify-content: flex-start
-
-                    p.swiper-product-name
-                        min-height: unset
 
 @media only screen and (max-width: 520px)
     .mobile #landingpage,
