--- a/sass/main.css
+++ b/sass/main.css
@@ -825,7 +825,7 @@ button.swiper-pagination-bullet {
 #landingpage .lpCarousel .swiper {
   max-width: 100%;
   position: relative;
-  padding: 0 60px;
+  padding: 0 40px;
   overflow: hidden;
 }
 #landingpage .lpCarousel .swiper-container {
@@ -840,7 +840,7 @@ button.swiper-pagination-bullet {
   margin: 0 auto;
   height: auto;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide {
+#landingpage .lpCarousel .swiper .swiper-slide {
   border-radius: 6px;
   cursor: pointer;
   height: auto;
@@ -851,11 +851,11 @@ button.swiper-pagination-bullet {
   padding: 24px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
   justify-content: space-between;
   text-decoration: none;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide p {
+#landingpage .lpCarousel .swiper .swiper-slide p {
   font-size: 14px;
   line-height: 21px;
   font-weight: 500;
@@ -864,27 +864,28 @@ button.swiper-pagination-bullet {
   color: #212121;
   transition: all 300ms ease-in-out;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-name {
-  min-height: 44px;
-}
-#landingpage .lpCarousel .swiper a.swiper-slide .swiper-product-img {
+#landingpage .lpCarousel .swiper .swiper-slide .swiper-product-img {
   margin-bottom: 10px;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-cprice {
+#landingpage .lpCarousel .swiper .swiper-slide p.swiper-product-name {
+  margin-top: 12px;
+}
+#landingpage .lpCarousel .swiper .swiper-slide p.swiper-product-cprice {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-cprice.noValue {
+#landingpage .lpCarousel .swiper .swiper-slide p.swiper-product-cprice.noValue {
   display: none;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-price {
+#landingpage .lpCarousel .swiper .swiper-slide p.swiper-product-price {
   color: #E9242E;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
+  margin-top: auto;
 }
-#landingpage .lpCarousel .swiper a.swiper-slide:hover {
+#landingpage .lpCarousel .swiper .swiper-slide:hover {
   box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.15);
 }
 #landingpage .lpCarousel .swiper-product-prices {
@@ -987,8 +988,7 @@ button.swiper-pagination-bullet {
   .mobileapp #landingpage .lpCarousel .swiper a.alza-btn {
     margin-top: 0;
   }
-  .mobile #landingpage .lpCarousel .swiper .swiper-container, .mobile #landingpage .lpCarousel .swiper .swiper-wrapper,
-  .mobileapp #landingpage .lpCarousel .swiper .swiper-container,
+  .mobile #landingpage .lpCarousel .swiper .swiper-wrapper,
   .mobileapp #landingpage .lpCarousel .swiper .swiper-wrapper {
     padding: 0;
   }
@@ -1005,10 +1005,6 @@ button.swiper-pagination-bullet {
   .mobile #landingpage .lpCarousel .swiper a.swiper-slide,
   .mobileapp #landingpage .lpCarousel .swiper a.swiper-slide {
     justify-content: flex-start;
-  }
-  .mobile #landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-name,
-  .mobileapp #landingpage .lpCarousel .swiper a.swiper-slide p.swiper-product-name {
-    min-height: unset;
   }
 }
 @media only screen and (max-width: 520px) {
